[project]
name = "output_as_input"
description = "A simple ComfyUI node that allows you to use recent output images as input in your workflows."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/a-und-b/ComfyUI_Output_as_Input"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "a-und-b"
DisplayName = "Output as Input"
Icon = ""
